--- a/AppSales/Src/LansingPage.fx.yaml
+++ b/AppSales/Src/LansingPage.fx.yaml
@@ -4,7 +4,7 @@ LansingPage As screen:
         Fill: =RGBA(237, 237, 237, 1)
 
     Label1 As label:
-        Text: ="Texto"
+        Text: ="Mi nombre es joseph"
         X: =465
         Y: =165
         ZIndex: =2
